--- a/main.css
+++ b/main.css
@@ -450,7 +450,7 @@ button {
     border-radius: 50%;
     display: block;
     margin-left: 15px; }
-  .nav__item:last-child:after {
+  .nav__item:nth-of-type(7):after {
     display: none; }
 
 .nav__link {
@@ -460,7 +460,7 @@ button {
   text-transform: uppercase; }
 
 .promo {
-  background-image: url(../../my_page/img/pageheder/Rectangle.png);
+  background-image: url(./../my_page/img/pageheder/Rectangle.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -799,49 +799,6 @@ button {
   height: 10px;
   margin: 0 -10px -10px 0;
   opacity: 0; }
-
-.form__radio_real:checked ~ .form__radio_style:after {
-  opacity: 1; }
-
-.form__radio_real:checked {
-  color: #e35028; }
-
-.form__radio_style {
-  display: inline-block;
-  height: 20px;
-  width: 20px;
-  line-height: 20px;
-  border-radius: 50%;
-  border: 1px solid #e35028;
-  background-image: -webkit-gradient(linear, left bottom, left top, ), #ededed 0%, white 0%;
-  background-image: -webkit-linear-gradient(bottom), #ededed 0%, white 0%;
-  background-image: -o-linear-gradient(bottom), #ededed 0%, white 0%;
-  background-image: linear-gradient(0deg), #ededed 0%, white 0%;
-  position: relative;
-  vertical-align: middle; }
-
-.form__radio_style:after {
-  content: "";
-  width: 8px;
-  height: 8px;
-  display: block;
-  background: #e35028;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  opacity: 0; }
-
-.form__radio_title {
-  display: inline-block;
-  color: #fff;
-  line-height: 14px;
-  font-size: 14px;
-  padding-left: 5px;
-  padding-right: 10px; }
 
 .footer {
   background-image: url(../../my_page/img/pagefooter/bgfooter.png);
