--- a/css/blocks/menu.scss
+++ b/css/blocks/menu.scss
@@ -1,5 +1,5 @@
 .menu {
-  background-image: url(../../my_page/img/pagemenu/bgmenu.png);
+  background-image: url(./my_page/img/pagemenu/bgmenu.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
