--- a/css/blocks/promo.scss
+++ b/css/blocks/promo.scss
@@ -1,5 +1,5 @@
 .promo {
-  background-image: url(./../my_page/img/pageheder/Rectangle.png);
+  background-image: url(./my_page/img/pageheder/Rectangle.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
