--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -1,5 +1,5 @@
 .team {
-  background-image: url(../../my_page/img/pageteam/bgteam.png);
+  background-image: url(./my_page/img/pageteam/bgteam.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
