--- a/css/blocks/dark.scss
+++ b/css/blocks/dark.scss
@@ -1,5 +1,5 @@
 .dark {
-  background-image: url(../../my_page/img/pageburg/bg.png);
+  background-image: url(./my_page/img/pageburg/bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
