--- a/css/blocks/footer.scss
+++ b/css/blocks/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-image: url(../../my_page/img/pagefooter/bgfooter.png);
+  background-image: url(./my_page/img/pagefooter/bgfooter.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
