--- a/css/blocks/form.scss
+++ b/css/blocks/form.scss
@@ -1,5 +1,5 @@
 .form {
-  background-image: url(../../my_page/img/pageform/bgform.png);
+  background-image: url(./my_page/img/pageform/bgform.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
