--- a/css/blocks/work.scss
+++ b/css/blocks/work.scss
@@ -1,5 +1,5 @@
 .work {
-  background-image: url(../../my_page/img/pagehowwork/bgwork.png);
+  background-image: url(./my_page/img/pagehowwork/bgwork.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
