--- a/css/blocks/best.scss
+++ b/css/blocks/best.scss
@@ -1,5 +1,5 @@
 .best {
-   background-image: url(../../my_page/img/pagetwo/bg.png);
+   background-image: url(./my_page/img/pagetwo/bg.png);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center center;
