--- a/css/blocks/best.scss
+++ b/css/blocks/best.scss
@@ -7,15 +7,16 @@
 }
 
 .best__content {
-  margin-bottom: 140px;  
+  margin-bottom: 40px;  
 }
 
 .best__title {
   display: flex;
   justify-content: center;
   color: $black;
-  margin-bottom: 50px;
   letter-spacing: 4px;
+  margin-bottom: 50px;
+  letter-spacing: 0.5px;
 }
 
 .best__list {
