--- a/main.scss
+++ b/main.scss
@@ -32,4 +32,5 @@ $white: #fff;
 @import "css/blocks/work";
 @import "css/blocks/form";
 @import "css/blocks/footer";
+@import "css/blocks/fix_menu";
 
