--- a/css/blocks/promo.scss
+++ b/css/blocks/promo.scss
@@ -36,7 +36,7 @@
 .promo__scroll_btn {
   width: 29px;
   height: 15px;
-  background-image: url("../../my_page/img/pageheder/arrow-scroll.png");
+  background-image: url("./my_page/img/pageheder/arrow-scroll.png");
   background-repeat: no-repeat;
   background-size: contain;
   display: block;
