--- a/main.css
+++ b/main.css
@@ -497,7 +497,7 @@ button {
 .promo__scroll_btn {
   width: 29px;
   height: 15px;
-  background-image: url("../../my_page/img/pageheder/arrow-scroll.png");
+  background-image: url("./my_page/img/pageheder/arrow-scroll.png");
   background-repeat: no-repeat;
   background-size: contain;
   display: block;
