--- a/css/font/stylesheet.scss
+++ b/css/font/stylesheet.scss
@@ -46,3 +46,26 @@
     font-style: normal;
 }
 
+@mixin gagalin() {
+	font-family: 'Gagalin-Regular', Helvetica, sans-serif;
+}
+
+@mixin ubuntu($style: light) {
+	font-family: 'Ubuntu', Helvetica, sans-serif;
+
+	@if $style == light {
+		font-weight: 300;
+	}
+
+	@if $style == medium {
+		font-weight: 500;
+	}
+
+	@if $style == bold {
+		font-weight: bold;
+	}
+}
+
+@mixin life() {
+	font-family: 'Lifehack', Helvetica, sans-serif;
+}
