--- a/css/blocks/btn.scss
+++ b/css/blocks/btn.scss
@@ -1,5 +1,7 @@
 .btn {
   padding: 12px 15px;
+  @include ubuntu;
+  font-weight: 500;
   border-radius: 5px;
   background-color: $red;
   text-transform: uppercase;
