--- a/css/blocks/promo.scss
+++ b/css/blocks/promo.scss
@@ -4,6 +4,9 @@
   background-size: cover;
   background-position: center center;
   position: relative;
+  .title {
+    color: $yellow;
+  }
 }
 .promo__content {
   display: flex;
