--- a/main.scss
+++ b/main.scss
@@ -25,6 +25,7 @@ $white: #fff;
 
 @import "css/blocks/header";
 @import "css/blocks/nav";
+@import "css/blocks/logo";
 @import "css/blocks/promo";
 @import "css/blocks/btn";
 @import "css/blocks/best";
@@ -36,4 +37,6 @@ $white: #fff;
 @import "css/blocks/form";
 @import "css/blocks/footer";
 @import "css/blocks/fix_menu";
+@import "css/blocks/burgermenu";
+@import "css/blocks/block";
 
